--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -15,6 +15,9 @@
     .header_link
         font-size: 14px
 
+@media screen and (max-width: 860px)
+    .what_we__items 
+        justify-content: center
 @media screen and (max-width: 768px)
     .header__nav
         display: none
