--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -130,6 +130,7 @@ body
     font-style: normal
     font-size: 14px
     font-family: "Poppins", sans-serif
+    background-color: #000
 
 a
     color: #fff
@@ -261,8 +262,82 @@ a
         color: $color-C0C0C0
         text-align: center
 
+// ---------------------
+.what_we_do
+    margin-top: 113px
+    
 
+.what_we__title 
+    font-size: 40px
+    color: #fff
+    text-align: center
+.what_we__subtitle 
+    font-size: 23px
+    color: #c0c0c0
+    margin-top: 15px
+    text-align: center
+    margin-bottom: 42px
+.what_we__items 
+    display: flex
+    justify-content: space-between
+    flex-wrap: wrap
+    gap: 16px
+    
+.__item_wrap 
+    max-width: 576px
+    flex: 1 1 400px
+    // max-height: 600px
+    height: 600px
+    position: relative
+    padding: 30px
+    display: flex
+    align-items: flex-end
+    overflow: hidden
+    
+    &:hover
+        .__item_img
+            transform: scale(2)
+.__item_img_wrap 
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+.__item_img 
+    width: 100%
+    height: 100%
+    object-fit: cover
+    transition: all 15s ease
+._item_title 
+    font-size: 14px
+    color: #fff
+._item_subtitle 
+    font-size: 14px
+    color: #c0c0c0
+    margin-top: 30px
+._item_text_wrap
+    position: relative
+    z-index: 20
 
+._item_button_wrap 
+    margin-top: 10px
+    width: 143px
+    display: flex
+    min-height: 42px
+    align-items: center
+    gap: 6px
+    padding: 5px 4px
+    background-color: #fff
+    border-radius: 20px
+
+._button_img 
+    width: 32px
+    height: 32px
+    background-color: #000
+    border-radius: 40%
+.button_text 
+    font-size: 15px
+    color: #000
 
 
 
